[gd_scene load_steps=23 format=2]

[ext_resource path="res://interface/UpgradeButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/images/upgrades/dutch_oven_bg.png" type="Texture" id=2]
[ext_resource path="res://interface/images/upgrades/gryl_starego_bg.png" type="Texture" id=3]
[ext_resource path="res://interface/images/upgrades/placeholder.png" type="Texture" id=4]
[ext_resource path="res://interface/images/upgrades/gryl_bg.png" type="Texture" id=5]
[ext_resource path="res://interface/FishSmokeBar.gd" type="Script" id=6]
[ext_resource path="res://interface/Counter.tscn" type="PackedScene" id=7]
[ext_resource path="res://interface/MenuBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/HUD.gd" type="Script" id=9]
[ext_resource path="res://interface/Counter.gd" type="Script" id=10]
[ext_resource path="res://interface/Achievements.tscn" type="PackedScene" id=11]
[ext_resource path="res://interface/images/buy_modes/buy_mode_1.png" type="Texture" id=12]
[ext_resource path="res://interface/images/firepit/fire_1.png" type="Texture" id=13]
[ext_resource path="res://interface/images/firepit/fire_2.png" type="Texture" id=14]
[ext_resource path="res://interface/images/upgrades/firewood_bg.png" type="Texture" id=15]
[ext_resource path="res://interface/images/upgrades/smoke_machine_bg.png" type="Texture" id=16]
[ext_resource path="res://interface/images/progress_bar/progressbar_bg.png" type="Texture" id=17]
[ext_resource path="res://interface/images/progress_bar/progressbar_fill.png" type="Texture" id=18]
[ext_resource path="res://interface/images/menu/menu_button_bg.png" type="Texture" id=19]
[ext_resource path="res://interface/images/progress_bar/progressbar_over.png" type="Texture" id=20]
[ext_resource path="res://interface/images/upgrades/auto_clicker_bg.png" type="Texture" id=21]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 2
frame_0/texture = ExtResource( 13 )
frame_1/texture = ExtResource( 14 )
frame_1/delay_sec = 0.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="MenuButton" type="TextureButton" parent="."]
margin_right = 60.0
margin_bottom = 60.0
texture_normal = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" parent="." instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="FireButton" type="TextureButton" parent="."]
margin_left = 150.0
margin_top = 540.0
margin_right = 330.0
margin_bottom = 720.0
texture_normal = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishSmokeBar" type="TextureProgress" parent="."]
margin_left = 150.0
margin_top = 120.0
margin_right = 330.0
margin_bottom = 180.0
step = 0.1
texture_under = ExtResource( 17 )
texture_over = ExtResource( 20 )
texture_progress = ExtResource( 18 )
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegressionTimer" type="Timer" parent="FishSmokeBar"]
wait_time = 0.05
autostart = true

[node name="Upgrades" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyModeButton" type="TextureButton" parent="Upgrades"]
margin_left = 80.0
margin_right = 140.0
margin_bottom = 60.0
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton1" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_right = 480.0
texture_normal = ExtResource( 21 )

[node name="UpgradeButton2" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_top = 90.0
margin_right = 480.0
margin_bottom = 180.0
texture_normal = ExtResource( 15 )

[node name="UpgradeButton3" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_top = 180.0
margin_right = 480.0
margin_bottom = 270.0
texture_normal = ExtResource( 5 )

[node name="UpgradeButton4" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_top = 270.0
margin_right = 480.0
margin_bottom = 360.0
texture_normal = ExtResource( 2 )

[node name="UpgradeButton5" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_top = 360.0
margin_right = 480.0
margin_bottom = 450.0
texture_normal = ExtResource( 16 )

[node name="UpgradeButton6" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_top = 450.0
margin_right = 480.0
margin_bottom = 540.0
texture_normal = ExtResource( 3 )

[node name="UpgradeButton7" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_top = 540.0
margin_right = 480.0
margin_bottom = 630.0
texture_normal = ExtResource( 4 )

[node name="UpgradeButton8" parent="Upgrades" instance=ExtResource( 1 )]
margin_left = 390.0
margin_top = 630.0
margin_right = 480.0
margin_bottom = 720.0
texture_normal = ExtResource( 4 )

[node name="MenuBox" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 90.0
margin_top = 270.0
margin_right = 390.0
margin_bottom = 530.0

[node name="AchievementBox" parent="." instance=ExtResource( 11 )]
visible = false

[node name="AchievementTimer" type="Timer" parent="AchievementBox"]

[connection signal="pressed" from="MenuButton" to="MenuBox" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="FireButton" to="FishSmokeBar" method="_on_FireButton_pressed"]
[connection signal="timeout" from="FishSmokeBar/RegressionTimer" to="FishSmokeBar" method="_on_RegressionTimer_timeout"]
[connection signal="pressed" from="Upgrades/BuyModeButton" to="." method="_on_BuyModeButton_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton1" to="." method="_on_UpgradeButton1_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton2" to="." method="_on_UpgradeButton2_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton3" to="." method="_on_UpgradeButton3_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton4" to="." method="_on_UpgradeButton4_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton5" to="." method="_on_UpgradeButton5_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton6" to="." method="_on_UpgradeButton6_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton7" to="." method="_on_UpgradeButton7_pressed"]
[connection signal="pressed" from="Upgrades/UpgradeButton8" to="." method="_on_UpgradeButton8_pressed"]
[connection signal="pressed" from="MenuBox/VBoxContainer/HBoxContainer/AchievementButton" to="AchievementBox" method="_on_AchievementButton_pressed"]
[connection signal="pressed" from="AchievementBox/ExitButton" to="AchievementBox" method="_on_ExitButton_pressed"]
[connection signal="timeout" from="AchievementBox/AchievementTimer" to="AchievementBox" method="_on_AchievementTimer_timeout"]

[editable path="MenuBox"]
[editable path="AchievementBox"]
